--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-paginate": "^8.2.0",
     "react-tsparticles": "^2.12.2",
     "tailwindcss": "3.3.3",
     "tsparticles": "^2.12.0",
